# monition

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
docs/: 2026-06-18-v6-refactor-charter.md  road.md  scope-alignment-2026-06-11.md
docs/contracts/: export-firings.md  firing-observer.md  relevance-cascade.md  retrievals-log.md  takeaway-store.md
docs/decisions/: 2026-06-13-firing-capture-minimum-for-cheap-eval.md  2026-06-14-replay-ablation-runner.md  2026-06-17-adopt-deprecation.md  (+14 more)
method/: lesson-routing.md
tests/: conftest.py  test_add_gates.py  test_adopt.py  test_batch_attribution.py  test_batch_decisions.py  test_calibrate.py  test_cascade.py  test_cold_pause.py  test_compaction.py  test_conformance_dolt.py  test_decisions.py  test_disable.py  test_dolt_server.py  test_embed.py  test_embed_cache.py  test_embed_daemon.py  test_export_firings.py  test_fold.py  test_hook_cascade.py  test_init_decompose.py  test_init_sync.py  test_injection_cap.py  test_log_recurrence.py  test_mcp_server.py  test_metrics.py  test_module_parity.py  test_on_demand.py  test_prompt_hook.py  test_proposals.py  test_provenance.py  test_reach_filter.py  test_replay.py  test_report.py  test_resurrection.py  test_score.py  test_score_wiring.py  test_situation.py  test_snapshot.py  test_store.py  test_tool_call.py  (+4 more)
tools/: .cms-version  build_relevance_labels.py  craft_reminder.py  craft_reminder_local.py  embed_relevance_cache.py  eval_metamatch.py  hook_bench.py  lint.py  monition_dashboard.py  regen_from_cms.py  train_relevance_head.py
(+92 files in other folders)
