[project]
name = "monition"
version = "0.4.0"
description = "The value layer over takeaway stores: offline audit now, EV scoring later"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
embed = ["fastembed>=0.3"]
mcp = ["mcp>=1.2"]

[project.scripts]
monition = "monition.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
